--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": ["Magig Mirror",
               "Music Server",
               "Lyrion Server",
-              "LMS",
+              "LMS"
   ],
   "author": "barnosch (https://github.com/barnosch)",
   "license": "MIT",
